<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="security_setting">安全选项设置</string>
    <string name="security_enabled_title">防盗状态</string>
    <string name="security_enabled_summaryon">开启</string>
    <string name="security_enabled_summaryoff">关闭</string>
    <string name="security_disabled_title">注意</string>
    <string name="security_disabled_msg">您的手机将失去防盗保护，建议开启此项服务</string>
    <string name="trust_number_summary">当您手机不幸丢失的时候，我们将发送丢失信息到此号码
	</string>
    <string name="trust_number_input_title">请输入您信任的手机号码</string>
    <string name="reset_title">重置</string>
    <string name="reset_dlg_title">重置您的基本信息</string>
    <string name="reset_dlg_msg">
		软件将复位，请重新设置信任手机号、本机号码以及报警铃声</string>
    <string name="reset_summary">将复位您的基本信息，您可以接着使用</string>
    <string name="config_alarm">短信报警设置</string>
    <string name="alarm_title">报警设置</string>
    <string name="alarm_summary">设置短信报警铃声，为手机保驾护航</string>
    <string name="ringtone_title">报警铃声</string>
    <string name="ringtone_summary">手机收到报警请求短信后，将大声播放此铃声，方便主人寻找</string>
    <string name="myphonenum_title">本机号码</string>
    <string name="myphonenum_summary">设置您的本机号码，此号码用于匹配您的报警请求短信</string>
    <string name="myphonenum_input_title">请输入您的本机号码</string>
    <string name="alarm_test_title">测试报警</string>
    <string name="alarm_test_summary">测试短信报警铃声</string>
    <string name="alarm_test_dlg_msg">正在测试报警铃声</string>
    <string name="alarm_test_dlg_msg_no">请先设置报警铃声！</string>
    <string name="alarm_test_dlg_msg_error">无法播放，请重新选择报警铃声</string>
    <string name="alarm_test_dlg_pos_text">停止测试</string>
    <string name="alarm_test_dlg_pos_text_quit">退出</string>
    <string name="alarm_about_summary">介绍有关短信报警使用细节</string>
    <string name="other_title">其他</string>
    <string name="other_show_title">关于</string>
    <string name="other_show_summary">介绍软件使用相关细节</string>
    <string name="other_dlg_msg">
		开发者: Xinwei.Yi\nEmail: Xinwei.Yi@gmail.com\n
		1.这是一个以SIM卡更换为判断基础的安全小软件，如果您是主动更换SIM卡，请预先进入软件设置状态为：关闭，更换SIM卡之后先进行一次重置，再设置状态为：开启。\n
		2.如果您使用短信报警功能，请参考报警设置里面的设置教程。
	</string>
    <string name="sms_content">检查到手机号为：{phoneNum} 的手机SIM卡有变化，请确认</string>
    <string name="unknown_self_num">未知号码</string>
    <string name="defend_open">开启防盗</string>
    <string name="alarming">有警报</string>
    <string name="alarm_tip">正在播放报警音乐，要选择停止吗？</string>

    <!-- setting quit resources -->
    <string name="setting_incompleted">设置未完成</string>
    <string name="setting_quit_no_trustnum">请设置受信号码</string>
    <string name="setting_quit_no_selfnum">请设置本机号码</string>
    <string name="setting_quit_no_ringtone">请设置报警铃声</string>
    <string name="setting_quit_no_trustnum_selfnum">请设置受信号码和本机号码</string>
    <string name="setting_quit_no_trustnum_ringtone">请设置受信号码和报警铃声</string>
    <string name="setting_quit_no_selfnum_ringtone">请设置本机号码和报警铃声</string>
    <string name="setting_quit_no_trustnum_selfnum_ringtone">请设置受信号码、本机号码和报警铃声</string>
    <string name="setting_quit_resetting">返回设置</string>
    <string name="setting_quit_nonreminder">不再提醒</string>
    <string name="set_alarm_pwd_title">请设置用户密码</string>
    <string name="set_alarm_pwd_firsttip">请输入密码</string>
    <string name="set_alarm_pwd_secondtip">请再次输入密码</string>
    <string name="set_alarm_pwd_error_tip">密码长度不够或者两次密码输入不匹配</string>
    <string name="user_pwd_setting">密码设置</string>
    <string name="set_pwd_title">设置密码</string>
    <string name="set_pwd_desc">您需要设置用户密码才能正常使用此软件功能，
		此用户密码还将在短信报警中起作用。</string>
    <string name="set_pwd_ok">您的密码已设置成功</string>
    <string name="set_pwd_not_allow">您的密码已经设置，如需更改请选择更改密码项</string>
    <string name="change_pwd_no_pwd_exist">请先设置密码才能修改</string>
    <string name="cur_pwd_tip">请输入当前密码：</string>
    <string name="new_pwd_tip">请输入新密码：</string>
    <string name="new_pwd_again_tip">请再次输入新密码：</string>
    <string name="cur_pwd_input_error">原始密码输入有误</string>
    <string name="change_pwd_success_toast">更改密码成功</string>
    <string name="require_pwd_when_enter_tip">进入软件输入密码时间间隔设置</string>
    <string name="show_pwd_title">当前时间间隔</string>
    <string name="select_show_pwd_time_interval">请选择时间间隔</string>
    <string name="input_pwd_desc">您总共有三次尝试机会，三次过后还不能正确输入密码将退出应用！</string>
    <string name="pwd_retry_times_left_tip">当前剩余次数：</string>
    <string name="input_pwd_tip">输入密码进入应用</string>
    <string name="pwd_mismatch_toast">密码输入有误，请重新输入</string>
    <string name="version_note_dlg_title">新版本特性</string>

    <!-- new version -->
    <string name="item_protection_tab">防盗设置</string>
    <string name="item_alarm_tab">报警设置</string>
    <string name="item_pwd_tab">密码设置</string>
    <!-- protection string -->
    <string name="protection_state">防盗状态</string>
    <string name="state_on">已开启</string>
    <string name="state_off">已关闭，为了您手机的安全，请启用防盗功能</string>
    <string name="trust_number_title">受信号码</string>
    <string name="trust_number_desc">当您手机不幸丢失的时候，我们将发送丢失信息到此号码</string>
    <string name="master_markup_title">主人标识</string>
    <string name="master_markup_desc">发送防盗通知的时候会带上此标识</string>
    <string name="reset_protection_setting_title">防盗复位</string>
    <string name="reset_protection_setting_desc">此操作将重新标识您的手机，在您主动换SIM卡的情况下，请执行此操作</string>
    <string name="no_sim_title">无SIM卡</string>
    <string name="no_sim_msg">防盗保护需要您的手机SIM卡正确运行，请检查SIM卡设置</string>
    <string name="protection_off_banner">关闭防盗</string>
    <string name="protection_off_tip">您的手机将失去防盗保护，建议开启此项服务</string>
    <string name="protection_on_tip">开启防盗</string>
    <string name="trust_number_banner">设置信任手机号码</string>
    <string name="trust_number_tip">此号码将用于接收防盗信息</string>
    <string name="wrong_number_toast">请输入正确的手机号码</string>
    <string name="master_markup_tip">在这里输入您对爱机的标识语，加上您的手机号码将更加便于识别</string>
    <string name="master_markup_hint">潇洒哥的手机（号码：13800138000）</string>
    <string name="reset_protection_setting_tip">重置设置之后，原有被保护的SIM卡相关信息将被清除，新的SIM卡将成为受保护对象</string>
    <string name="new_version_note_quit">我知道了</string>
    <string name="new_version_banner">手机防盗{?}版更新</string>
    <string name="old_user_tip">为确保有效防盗，请老用户检查一下设置是否正确。</string>

    <!-- alarm string -->
    <string name="alarm_ringtone_title">报警铃声</string>
    <string name="alarm_ringtone_desc">手机收到报警请求短信后，将大声播放此铃声，方便主人寻找</string>
    <string name="alarm_ringtone_test_title">测试报警</string>
    <string name="alarm_ringtone_test_desc">测试短信报警铃声</string>
    <string name="alarm_ringtone_about_title">如何使用</string>
    <string name="alarm_ringtone_about_desc">介绍有关短信报警使用细节</string>
    <string name="alarm_ringtone_selection_tip">选择报警铃声</string>
    <string name="alarm_about_title">报警使用教程</string>
    <string name="test_alarm_ringtone_banner">测试报警铃声</string>
    <string name="test_alarm_tip">正在测试报警铃声</string>
    <string name="test_alarm_error_tip">无法播放，请重新选择报警铃声</string>
    <string name="test_alarm_stop">停止</string>
    <string name="test_alarm_quit">退出</string>
    <string name="alarm_ongoing_banner">来自手机防盗的警报</string>
    <string name="alarm_ongoing_tip">请输入密码解除警报</string>
    <string name="alarm_message">【?】的手机SIM卡发生变化，若非所有者自己更换SIM卡，请转告之，多谢！</string>
    <string name="no_markup">未设置手机标识用户</string>

    <!-- pwd string -->
    <string name="pwd_title">设置密码</string>
    <string name="pwd_ok">您的密码已设置成功</string>
    <string name="pwd_needed">您需要设置用户密码才能正常使用此软件功能，
		此用户密码还将在短信报警中起作用。</string>
    <string name="change_pwd_title">更改密码</string>
    <string name="change_pwd_desc">如果您的密码已泄露或太简单，
		您可以在此更改之前设置的用户密码。</string>
    <string name="choose_timespan_title">选择时长</string>
    <string name="choose_timespan_desc">请选择进入软件时弹出输入密码提示对话框的时间间隔</string>
    <string name="pwd_firsttip">请输入密码</string>
    <string name="pwd_secondtip">请再次输入密码</string>
    <string name="old_pwd_tip">请输入当前密码：</string>
    <string name="newly_pwd_tip">请输入新密码：</string>
    <string name="newly_pwd_again_tip">请再次输入新密码：</string>
    <string name="welcome">欢迎使用手机防盗</string>
    <string name="set_alarm_pwd_hint">至少六个字符</string>
    <string name="set_alarm_pwd_tip">请设置用户密码，敬告：务必避免泄露密码！请牢记用户密码，丢失密码将失去报警功能！
	</string>
    <string name="change_alarm_pwd_tip">更换新的报警密码</string>
    <string name="set_pwd_error_tip">密码长度不够或者两次密码输入不匹配</string>
    <string name="pwd_already_setted_toast">您的密码已经设置，如需更改请选择更改密码项</string>
    <string name="wrong_old_pwd">原始密码输入有误</string>
    <string name="new_pwd_mismatch">两次输入的新密码不匹配</string>
    <string name="show_pwd">显示密码</string>
    <string name="reset_pwd_success_toast">修改密码成功</string>
    <string name="show_pwd_time_interval_banner">请选择时间间隔</string>

    <!-- other -->
    <string name="about_title">关于</string>
    <string name="author">联系作者：Email:Xinwei.Yi@gmail.com</string>
    <string name="version_info">软件版本：</string>
    <string name="app_name">手机防盗</string>
    <string name="app_name_tip">软件名称：</string>

</resources>