<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingLeft="5dip">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/set_alarm_pwd_tip"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:paddingBottom="10dip" />
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/set_alarm_pwd_firsttip"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<EditText android:id="@+id/set_alarm_pwd"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:hint="@string/set_alarm_pwd_hint" android:password="true"
		android:maxLength="12" android:layout_weight="1.0" android:singleLine="true" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/set_alarm_pwd_secondtip"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<EditText android:id="@+id/check_alarm_pwd"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:hint="@string/set_alarm_pwd_hint" android:password="true"
		android:maxLength="12" android:layout_weight="1.0" android:singleLine="true" />

</LinearLayout>